tcp-writer: new 'tcp' writer
Signed-off-by: Eduardo Silva <eduardo@treasure-data.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(src_helpers
   flb_data_file.c
   flb_report.c
   flb_proc.c
+  flb_network.c
   )
 
 # flb-tail-writer
@@ -10,4 +11,10 @@ set(src_tail_writer
   ${src_helpers}
   flb-tail-writer.c)
 
+# flb-tcp-writer
+set(src_tcp_writer
+  ${src_helpers}
+  flb-tcp-writer.c)
+
 add_executable(flb-tail-writer ${src_tail_writer})
+add_executable(flb-tcp-writer ${src_tcp_writer})
